demos/Gateway istio demo/my-app.yaml
# nginx app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
---
# a simple webapp with 2 replicas
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp
  labels:
    app: simple-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      # ⬇⬇⬇ Containers
      containers:
      - image: kodekloud/simple-webapp:red
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-service
  labels:
    app: simple-webapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: simple-webapp
---

# another simple webapp with just 1 replica, use this to test the pods selector of ClusterIp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp2
  labels:
    app: simple-webapp
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: simple-webapp
  template:
    metadata:
      labels:
        app: simple-webapp
    spec:
      containers:
      - image: kodekloud/simple-webapp:red
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
