demos/Gateway istio demo/gateway.yaml
# this works because istio has been installed sidecar mode by downloading istio and install manually.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: infra
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    # hostname: localhost
    port: 80
    allowedRoutes:
      namespaces:
        from: All # should use Selector for the most secure option
  - name: https
    protocol: HTTPS
    # hostname: localhost
    port: 443
    allowedRoutes:
      namespaces:
        from: All # should use Selector for the most secure option
    tls:
      mode: Terminate
      certificateRefs:
        # - name: tls-cert
        - name: generic-tls-secret # your TLS certificate secret
          kind: Secret
          namespace: infra
