demos/Gateway istio demo/dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-route
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: api-gateway
    namespace: infra
    port: 443
    sectionName: https  # Explicit reference to HTTPS listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dashboard
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: kubernetes-dashboard-web
      port: 8000
    # - name: kubernetes-dashboard-kong-proxy
    #   port: 443
  - matches:
    - path:
        type: PathPrefix
        value: /dashboard/api
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
    backendRefs:
    - name: kubernetes-dashboard-api
      port: 8000
